tests/neg/objects/opt-fields-01.ts

/*@ opt :: (Mutable) { f?: posint } */
let opt: { f?: number } = { } ;

opt.f = -1;
